update: CLAUDE.md 添加 JVM 参数（Chronicle Queue 依赖）