@@ -19,3 +19,24 @@
 ## Java 构建环境
 构建环境规范见 /Users/tong/Documents/GitHub/OracleBetX-Projects/OracleBetx-Skill/oraclebetx-java-build/SKILL.md，所有 mvn 命令必须按照该规范执行。
 核心要点：必须使用 `SHELL=/bin/bash JAVA_HOME="/Users/tong/.sdkman/candidates/java/current" /opt/homebrew/bin/mvn` 执行 Maven 命令。
+
+## JVM 参数（Chronicle Queue / WAL 依赖）
+
+运行或测试时需要以下 JVM flags，否则会报 `InaccessibleObjectException`：
+
+```
+--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED
+--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
+--add-opens=java.base/java.lang=ALL-UNNAMED
+--add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+--add-opens=java.base/java.io=ALL-UNNAMED
+--add-opens=java.base/java.util=ALL-UNNAMED
+```
+
+通过 MAVEN_OPTS 设置：
+```bash
+export MAVEN_OPTS="--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED"
+```
+
+或通过 `source env.sh`（项目公共环境变量脚本已包含此配置）。
